modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -21,19 +21,25 @@
 <body>
 
   <!-- ==========Navigation bar========== -->
-  <nav>
-    <img src="images/logo.svg" alt="" aria-hidden="true">
-    <p>Try it free</p>
+  <nav class="nav-bar">
+    <img src="images/logo.svg" alt="" aria-hidden="true" class="main-logo">
+    <a href="#" class="try-it">Try it free</a>
   </nav>
   
+  <!-- ==========Header========== -->
+  <header class="header">
+    <div class="header-content">
+      <h1 class="header-title">Build The Community Your Fans Will Love</h1>
+      <p class="header-description">
+        Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.
+      </p>
+    </div>
+    <a href="#" class="header-button">Get Started For Free</a>
+    <img src="images/screen-mockups.svg" alt="" aria-hidden="true" class="header-img">
+  </header>
+
   <!-- ==========Main========== -->
   <main>
-    <h1>Build The Community Your Fans Will Love</h1>
-    <p>
-      Huddle re-imagines the way we build communities. You have a voice, but so does your audience. Create connections with your users as you engage in genuine discussion.
-    </p>
-    <a href="#">Get Started For Free</a>
-    <img src="images/screen-mockups.svg" alt="" aria-hidden="true">
     <img src="images/icon-communities.svg" alt="" aria-hidden="true">
     <h2>1.4k+</h2>
     <p>Communities Formed</p>
