modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -39,14 +39,33 @@
   </header>
 
   <!-- ==========Main========== -->
-  <main>
-    <img src="images/icon-communities.svg" alt="" aria-hidden="true">
-    <h2>1.4k+</h2>
-    <p>Communities Formed</p>
-    <img src="images/icon-messages.svg" alt="" aria-hidden="true">
-    <h2>2.7m+</h2>
-    <p>Messages Sent</p>
-    <img src="images/illustration-grow-together.svg" alt="" aria-hidden="true">
+  <main class="main-containter">
+
+    <!-- ==========Statistic section========== -->
+    <section class="statistic">
+      <div class="community">
+        <img src="images/icon-communities.svg" alt="" aria-hidden="true" class="community-img">
+        <h2 class="community-number">1.4k+</h2>
+        <p class="community-description">
+          Communities Formed
+        </p>
+      </div>
+      <div class="message">
+        <img src="images/icon-messages.svg" alt="" aria-hidden="true" class="message-img">
+        <h2 class="message-number">2.7m+</h2>
+        <p class="message-description">
+          Messages <br> Sent
+        </p>
+      </div>
+    </section>
+    
+    <section class="grow-together">
+      <div class="imgs">
+        <img src="images/bg-section-top-mobile-2.svg" alt="">
+        <img src="images/illustration-grow-together.svg" alt="" aria-hidden="true" class="grow-together-img">
+      </div>
+    </section>
+
     <h3>Grow Together</h3>
     <p>
       Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form. 
