--- a/index.html
+++ b/index.html
@@ -53,33 +53,57 @@
       <div class="message">
         <img src="images/icon-messages.svg" alt="" aria-hidden="true" class="message-img">
         <h2 class="message-number">2.7m+</h2>
-        <p class="message-description">
-          Messages <br> Sent
-        </p>
-      </div>
-    </section>
-    
-    <section class="grow-together">
-      <div class="imgs">
-        <img src="images/bg-section-top-mobile-2.svg" alt="">
-        <img src="images/illustration-grow-together.svg" alt="" aria-hidden="true" class="grow-together-img">
+        <div class="message-description">
+          <p>Messages</p>
+          <p>Sent</p>
+        </div>
       </div>
     </section>
 
-    <h3>Grow Together</h3>
-    <p>
-      Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form. 
-    </p>
-    <img src="images/illustration-flowing-conversation.svg" alt="" aria-hidden="true">
-    <h3>Flowing Conversations</h3>
-    <p>
-      You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
-    </p>
-    <img src="images/illustration-your-users.svg" alt="" aria-hidden="true">
-    <h3>Your Users</h3>
-    <p>
-      It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.
-    </p>
+    <!-- ==========Utility section========== -->
+    <section class="utility">
+
+      <div class="waves">
+        <div class="top-wave-img">
+          <img src="images/bg-section-top-mobile-1.svg" alt="" aria-hidden="true">
+        </div>
+  
+        <div class="grow">
+          <img src="images/illustration-grow-together.svg" alt="" aria-hidden="true" class="grow-img">
+          <div class="grow-content">
+            <h3 class="grow-title">Grow Together</h3>
+            <p class="grow-description">
+              Generate meaningful discussions with your audience and build a strong, loyal community. Think of the insightful conversations you miss out on with a feedback form. 
+            </p>
+          </div>
+        </div>
+  
+        <div class="bot-wave-img">
+          <img src="images/bg-section-bottom-mobile-1.svg" alt="" aria-hidden="true">
+        </div>
+      </div>
+
+      <div class="flowing">
+        <img src="images/illustration-flowing-conversation.svg" alt="" aria-hidden="true" class="flowing-img">
+        <div class="flowing-content">
+          <h3 class="flowing-title">Flowing Conversations</h3>
+          <p class="flowing-description">
+            You wouldn't paginate a conversation in real life, so why do it online? Our threads have just-in-time loading for a more natural flow.
+          </p>
+        </div>
+      </div>
+
+      <div class="users">
+        <img src="images/illustration-your-users.svg" alt="" aria-hidden="true" class="users-img">
+        <div class="users-content">
+          <h3 class="users-title">Your Users</h3>
+          <p class="users-description">
+            It takes no time at all to integrate Huddle with your app's authentication solution. This means, once signed in to your app, your users can start chatting immediately.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <h3>Ready To Build Your Community?</h3>
     <a href="#">Get Started For Free</a>
     <h4>Newsletter</h4>
