--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
+
+  <!-- Font awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.2.0/css/all.css"/>
 </head>
 <body>
 
@@ -130,6 +133,7 @@
       <p class="newsletter-description">
         To recieve tips on how to grow your community, sign up to our weekly newsletter. We’ll never send you spam or pass on your email address
       </p>
+      <!-- ==========Email form========== -->
       <form action="#" class="footer-newsletter-form">
         <label for="typeEmail" hidden>Email:</label>
         <input 
@@ -146,17 +150,30 @@
       </form>
     </div>
 
-    <img src="images/logo.svg" alt="" aria-hidden="true">
-    <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
-    </p>
-    <ul>
-      <li>Phone: +1-543-123-4567</li>
-      <li>example@huddle.com</li>
-    </ul>
-    <img src="images/square-facebook.svg" alt="" aria-hidden="true">
-    <img src="images/instagram.svg" alt="" aria-hidden="true">
-    <img src="images/square-twitter.svg" alt="" aria-hidden="true">
+    <!-- ==========More========== -->
+    <div class="more">
+      <img src="images/logo.svg" alt="" aria-hidden="true" class="more-logo">
+      <p class="more-description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris nulla quam, hendrerit lacinia vestibulum a, ultrices quis sem.
+      </p>
+      <ul class="more-list">
+        <li>Phone: +1-543-123-4567</li>
+        <li>example@huddle.com</li>
+      </ul>
+      <div class="social">
+        <a href="#">
+          <i class="fa-brands fa-square-facebook"></i>
+        </a>
+        <a href="#">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#">
+          <i class="fa-brands fa-square-twitter"></i>
+        </a>
+      </div>
+
+    </div>
+
   </footer>
 
 </body>
