--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <!-- ==========Navigation bar========== -->
   <nav class="nav-bar">
     <img src="images/logo.svg" alt="" aria-hidden="true" class="main-logo">
-    <a href="#" class="try-it">Try it free</a>
+    <a href="#" class="try-it">Try it Free</a>
   </nav>
   
   <!-- ==========Header========== -->
