modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -67,9 +67,15 @@
     <section class="utility">
 
       <div class="waves-one">
-        <div class="top-wave-img">
+        <picture class="top-wave-img">
+          <source 
+          media="(max-width: 375px)"
+          srcset="images/bg-section-top-mobile-1.svg">
+          <source 
+          media="(min-width: 376px)"
+          srcset="images/bg-section-top-desktop-1.svg">
           <img src="images/bg-section-top-mobile-1.svg" alt="" aria-hidden="true">
-        </div>
+        </picture>
   
         <div class="grow">
           <img src="images/illustration-grow-together.svg" alt="" aria-hidden="true" class="grow-img">
@@ -81,9 +87,15 @@
           </div>
         </div>
   
-        <div class="bot-wave-img">
-          <img src="images/bg-section-bottom-mobile-1.svg" alt="" aria-hidden="true">
-        </div>
+        <picture class="bot-wave-img">
+          <source 
+          media="(max-width: 375px)"
+          srcset="images/bg-section-bottom-mobile-2.svg">
+          <source 
+          media="(min-width: 376px)"
+          srcset="images/bg-section-bottom-desktop-2.svg">
+          <img src="images/bg-section-bottom-mobile-2.svg" alt="" aria-hidden="true">
+        </picture>
       </div>
 
       <div class="flowing">
@@ -97,9 +109,15 @@
       </div>
 
       <div class="waves-two">
-        <div class="top-wave-img">
+        <picture class="top-wave-img">
+          <source 
+          media="(max-width: 375px)"
+          srcset="images/bg-section-top-mobile-2.svg">
+          <source 
+          media="(min-width: 376px)"
+          srcset="images/bg-section-top-desktop-2.svg">
           <img src="images/bg-section-top-mobile-2.svg" alt="" aria-hidden="true">
-        </div>
+        </picture>
 
         <div class="users">
           <img src="images/illustration-your-users.svg" alt="" aria-hidden="true" class="users-img">
@@ -111,14 +129,22 @@
           </div>
         </div>
 
-        <div class="bot-wave-img">
+        <picture class="bot-wave-img">
+          <source 
+          media="(max-width: 375px)"
+          srcset="images/bg-section-bottom-mobile-2.svg">
+          <source 
+          media="(min-width: 376px)"
+          srcset="images/bg-section-bottom-desktop-2.svg">
           <img src="images/bg-section-bottom-mobile-2.svg" alt="" aria-hidden="true">
-        </div>
+        </picture>
       </div>
 
       <!-- ==========Get started========== -->
       <div class="ready-to-build">
-        <h3 class="ready-title">Ready To Build Your Community?</h3>
+        <h3 class="ready-title">
+          Ready To Build Your Community?
+        </h3>
         <a href="#" class="ready-button">Get Started For Free</a>
       </div>
 
