modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       </p>
       <!-- ==========Email form========== -->
       <form action="#" class="footer-newsletter-form">
-        <label for="typeEmail" hidden>Email:</label>
+        <label for="typeEmail" class="email-label">Email:</label>
         <input 
         type="email" 
         id="typeEmail"
@@ -195,13 +195,13 @@
         <li>example@huddle.com</li>
       </ul>
       <div class="social">
-        <a href="#">
+        <a href="#" aria-label="facebook-logo">
           <i class="fa-brands fa-square-facebook"></i>
         </a>
-        <a href="#">
+        <a href="#" aria-label="instagram-logo">
           <i class="fa-brands fa-instagram"></i>
         </a>
-        <a href="#">
+        <a href="#" aria-label="twitter-logo">
           <i class="fa-brands fa-square-twitter"></i>
         </a>
       </div>
